# portfolio-website

./: .gitignore  README.md  prompt_plan.md  pyproject.toml  refactoring_roadmap.md  spec.md  todo.md
frontend/: .babelrc  .editorconfig  .eslintrc.js  .prettierrc  README.md  jest.config.js  package-lock.json  package.json  vite.config.js
frontend/__mocks__/: d3.js
frontend/src/: App.jsx  App.test.jsx  index.css  main.jsx
frontend/src/__mocks__/: d3.js
frontend/src/components/GraphView/: GraphView.jsx  GraphView.test.jsx
frontend/src/components/content/: ContentPage.jsx  ContentPage.module.css  ContentPage.test.jsx  ContentPanel.jsx  ContentPanel.module.css  ContentTiles.jsx  ContentTiles.module.css
frontend/src/components/graph/: GraphView.jsx  GraphView.test.jsx  MiniGraph.jsx  MiniGraph.test.jsx
frontend/src/components/layout/: MainLayout.jsx  MainLayout.module.css
frontend/src/constants/: graph.js  graph.test.js  mockData.js
frontend/src/contexts/: NodeContext.jsx
frontend/src/hooks/: useDragBehavior.js  useDragBehavior.test.js  useForceSimulation.js  useForceSimulation.test.js  useGraphLayout.js  useHighlightBehavior.js  useHighlightBehavior.test.js  useZoomBehavior.js  useZoomBehavior.test.js  useZoomDependentValues.js  useZoomDependentValues.test.js
frontend/src/utils/: graphHelpers.js  graphHelpers.test.js  index.js  test-utils.js  zoomCalculations.js  zoomCalculations.test.js
