[project]
name = "portfolio-site"
version = "0.1.0"
description = "Interactive portfolio website featuring a force-directed graph for content exploration, built with Django and React"
authors = [
    {name = "Adam Broniewski",email = "abroniewski@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "django (>=5.0,<6.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "django-cors-headers (>=4.7.0,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-django (>=4.10.0,<5.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django-debug-toolbar (>=5.0.1,<6.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.1.2,<8.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"